clusters/cl01tl/manifests/komodo/Ingress-komodo-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komodo-tailscale
  namespace: komodo
  labels:
    app.kubernetes.io/name: komodo-tailscale
    app.kubernetes.io/instance: komodo
    app.kubernetes.io/part-of: komodo
    tailscale.com/proxy-class: no-metrics
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - komodo-cl01tl
      secretName: komodo-cl01tl
  rules:
    - host: komodo-cl01tl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komodo-main
                port:
                  name: http
